# penguins-classification

./: README.md  pyproject.toml
models/: dt_model.pkl  knn_model.pkl  log_reg_model.pkl  svm_model.pkl
notebooks/: client.ipynb  penguins_classification.ipynb
penguins_classification/: penguins_app.py
